# AI-Mental-Health-Analyser

./: .gitignore  README.md  designdoc.md  pyproject.toml
accounts/: models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
alerts/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
alerts/migrations/: 0001_initial.py  0002_remove_alertevent_alerts_aler_user_id_d7d75c_idx_and_more.py  0003_alter_alertevent_risk_level.py
analysis/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_remove_analysisresult_analysis_an_session_9087b1_idx_and_more.py
auth_api/: __init__.py  serializers.py  urls.py  views.py
chat/: admin.py  models.py  serializers.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_remove_chatmessage_chat_chatme_session_70d41b_idx_and_more.py
dashboard/: urls.py  views.py
frontend/: urls.py  views.py
frontend/static/frontend/: app.js  styles.css
frontend/templates/frontend/: about.html  base.html  chat.html  dashboard.html  history.html  index.html  login.html  results.html  settings.html
mental_health_ai/: __init__.py  asgi.py  common.py  settings.py  urls.py  wsgi.py
